initialize modal script, adds visibility fix to review-btn

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -28,3 +28,6 @@ a {
 .hidden {
     display: none !important;
 }
+.vis-hidden {
+    visibility: hidden !important;
+}
